# exercism

./: README.md
rust/: Cargo.toml
rust/accumulate/.exercism/: metadata.json
rust/accumulate/src/: lib.rs
rust/acronym/.exercism/: metadata.json
rust/acronym/src/: lib.rs
rust/affine-cipher/.exercism/: metadata.json
rust/affine-cipher/src/: lib.rs
rust/all-your-base/.exercism/: metadata.json
rust/all-your-base/src/: lib.rs
rust/allergies/.exercism/: metadata.json
rust/allergies/src/: lib.rs
rust/alphametics/.exercism/: metadata.json
rust/alphametics/src/: lib.rs
rust/anagram/.exercism/: metadata.json
rust/anagram/src/: lib.rs
rust/armstrong-numbers/.exercism/: metadata.json
rust/armstrong-numbers/src/: lib.rs
rust/atbash-cipher/.exercism/: metadata.json
rust/atbash-cipher/src/: lib.rs
rust/beer-song/.exercism/: metadata.json
rust/beer-song/src/: lib.rs
rust/binary-search/.exercism/: metadata.json
rust/binary-search/src/: lib.rs
rust/bob/.exercism/: metadata.json
rust/bob/src/: lib.rs
rust/bowling/.exercism/: metadata.json
rust/bowling/src/: lib.rs
rust/circular-buffer/.exercism/: metadata.json
rust/circular-buffer/src/: lib.rs
rust/clock/.exercism/: metadata.json
rust/clock/src/: lib.rs
rust/collatz-conjecture/.exercism/: metadata.json
rust/collatz-conjecture/src/: lib.rs
rust/crypto-square/.exercism/: metadata.json
rust/crypto-square/src/: lib.rs
rust/diamond/src/: lib.rs
rust/luhn-from/: Cargo.toml
rust/luhn-trait/: Cargo.toml
rust/reverse-string/: Cargo.toml
rust/robot-name/: Cargo.toml
(+122 files in other folders)
